--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,9 @@ android {
         config {
             keyAlias 'macrokey'
             keyPassword 'macrokey'
-            storeFile file('/Users/hj/AndroidStudioProjects/MacroHardv2/macrokey.jks')
+            //storeFile file('/Users/hj/AndroidStudioProjects/MacroHardv2/macrokey.jks')
 //            storeFile file('C:/Users/User/Desktop/GDX/macrokey.jks')
-//              storeFile file('C:/Users/Nayr/Desktop/MacroHardv2/macrokey.jks')
+              storeFile file('C:/Users/Nayr/Desktop/MacroHardv2/macrokey.jks')
             storePassword 'macrokey'
         }
     }
