--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,8 +6,8 @@ android {
             //storeFile file('/Users/MinhBreaker/AndroidStudioProjects/MacroHardv2/macrokey.jks')
             //storeFile file('/Users/hj/AndroidStudioProjects/MacroHardv2/macrokey.jks')
              //storeFile file('C:/Users/User/Desktop/GDX/macrokey.jks')
-            storeFile file('C:/Users/Nayr/Desktop/MacroHardv2/macrokey.jks')
-            //storeFile file('C:/Users/Samuel/Desktop/School/Sophomore Term 5/ESC/libgdx/MacroHardv2/macrokey.jks')
+//            storeFile file('C:/Users/Nayr/Desktop/MacroHardv2/macrokey.jks')
+            storeFile file('C:/Users/Samuel/Desktop/School/Sophomore Term 5/ESC/libgdx/MacroHardv2/macrokey.jks')
             storePassword 'macrokey'
         }
     }
